[tool.poetry]
name = "pydeidentify"
version = "0.1.2"
description = "A simple text deidentification tool, built on huggingface's named entity recognition pipeline"
authors = ["Lucasc-99 <lucascecchi@gmail.com>"]
readme = "pydeidentify/README.md"
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
spacy = "^3.4.0"
en-core-web-trf = {url = "https://github.com/explosion/spacy-models/releases/download/en_core_web_trf-3.4.0/en_core_web_trf-3.4.0-py3-none-any.whl"}
spacy-transformers = "^1.1.7"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
