[tool.poetry]
name = "pydeidentify"
version = "0.2.1"
description = "A simple text deidentification tool, built on spacy's state-of-the-art named entity recognition pipeline, now supporting 22 languages."
authors = ["Lucasc-99 <lucascecchi@gmail.com>"]
readme = "pydeidentify/README.md"
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
spacy = "^3.4.0"
spacy-transformers = "^1.1.7"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
